fix footer is overlapped by amazon ads

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,8 @@ html, body {
 	right: 0;
 	color: white;
 	font-size: 0.8em;
-	line-height: 30px
+	line-height: 30px;
+	z-index: 9999;
 }
 
 #footer .powered.by {
